tests/machine/x/ocaml/tail_recursion.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/tail_recursion.ml", line 40, characters 19-22:
40 |   sum_rec (n - 1) (acc + n)
                        ^^^
Error: This expression has type unit but an expression was expected of type
         int


Context (around line 40):
  38 |     acc
  39 |   ) ;
  40 |   sum_rec (n - 1) (acc + n)
  41 | 
  42 | 
